Increase contrast by adding more borders and fix some issues

--- a/gtk-4.0/_common.scss
+++ b/gtk-4.0/_common.scss
@@ -1,13 +1,124 @@
 $asset_suffix: if($variant == 'dark', '-dark', '');
 
+/* Give buttons a border for more contrast */
+
+button:not(.background-preview-button),
+spinbutton,
+splitbutton,
+entry,
+iconview:selected,
+window.assistant .sidebar > label.highlight,
+menubar > item:selected,
+.navigation-sidebar > row:selected {
+  box-shadow: inset 0 0 0 1px $button_border;
+}
+
+popover.emoji-picker emoji {
+  &:focus,
+  &:hover,
+  &:active {
+    box-shadow: inset 0 0 0 1px $button_border;
+  }
+}
+
+flowbox:not(.background-flowbox) > flowboxchild,
+gridview > child {
+  &:selected {
+    box-shadow: inset 0 0 0 1px $button_border;
+  }
+}
+
+gridview > child.activatable {
+  &:hover,
+  &:active{
+    box-shadow: inset 0 0 0 1px $button_border;
+  }
+}
+
+tabbar tab,
+modelbutton {
+  &:hover,
+  &:active,
+  &:selected {
+    box-shadow: inset 0 0 0 1px $button_border;
+  }
+}
+
+row {
+  &.activatable:hover,
+  &.activatable:active,
+  &.activatable.has-open-popup {
+    box-shadow: inset 0 0 0 1px $button_border;
+  }
+}
+
+.boxed-list {
+  box-shadow: inset 0 0 0 1px $button_border,
+  0 0 0 1px transparentize(black, 0.97),
+  0 1px 3px 1px transparentize(black, .93),
+  0 2px 6px 2px transparentize(black, .97);
+
+  > row {
+    &.activatable:hover,
+    &.activatable:active,
+    &.activatable.has-open-popup {
+      box-shadow: none;
+    }
+  }
+}
+
+%button_flat {
+  &:not(:hover):not(.keyboard-activating):not(:active):not(:checked) {
+    box-shadow: none;
+  }
+}
+
+menubutton.flat > button,
+splitbutton.flat > menubutton > button,
+splitbutton.flat > button,
+calendar > header > button,
+button.emoji-section.image-button:not(.raised):not(.suggested-action):not(.destructive-action):not(.opaque),
+popover.menu button.image-button.model,
+popover.menu button.circular.image-button.model,
+window.dialog.message .dialog-action-area > button,
+spinbutton > button.image-button.up:not(.flat):not(.raised):not(.suggested-action):not(.destructive-action):not(.opaque),
+spinbutton > button.image-button.down:not(.flat):not(.raised):not(.suggested-action):not(.destructive-action):not(.opaque),
+searchbar > revealer > box .close,
+infobar .close,
+button.flat {
+  @extend %button_flat;
+}
+
+headerbar, .toolbar, searchbar > revealer > box, actionbar > revealer > box {
+  button:not(.raised):not(.suggested-action):not(.destructive-action):not(.opaque).arrow-button,
+  button:not(.raised):not(.suggested-action):not(.destructive-action):not(.opaque).image-button,
+  button:not(.raised):not(.suggested-action):not(.destructive-action):not(.opaque).image-text-button,
+  menubutton:not(.raised):not(.suggested-action):not(.destructive-action):not(.opaque).image-button > button,
+  splitbutton:not(.raised):not(.suggested-action):not(.destructive-action):not(.opaque),
+  splitbutton:not(.raised):not(.suggested-action):not(.destructive-action):not(.opaque) button {
+    @extend %button_flat;
+  }
+}
+
+columnview.view,
+treeview.view {
+  > header > button {
+    box-shadow: none;
+  }
+}
+
 /* macOS window buttons. Most of this (including the images that are used here) is borrowed from https://github.com/vinceliuice/WhiteSur-gtk-theme */
 windowcontrols:not(.empty) {
+  &.start, &.end {
+    margin: 0 6px 0 7px;
+  }
   button {
     margin: 0 1px 0 0;
     padding: 0;
     background-position: center;
     background-repeat: no-repeat;
     background-size: 16px 16px;
+    box-shadow: none;
     color: transparent;
     min-width: 16px;
     min-height: 16px;
@@ -30,14 +141,5 @@ windowcontrols:not(.empty) {
         }
       }
     }
-  }
-}
-
-windowcontrols:not(.empty) {
-  &.start {
-    margin: 0 6px 0 7px;
-  }
-  &.end {
-    margin: 0 6px 0 7px;
   }
 }
