--- a/gtk-4.0/_defaults.scss
+++ b/gtk-4.0/_defaults.scss
@@ -59,6 +59,10 @@
 @define-color popover_bg_color #{if($variant == 'light', #f7f7f7, lighten($dark_4, 2.5%))};
 @define-color popover_fg_color #{if($variant == 'light', transparentize(black, .2), white)};
 
+// Thumbnails
+@define-color thumbnail_bg_color #{if($variant == 'light', #f7f7f7, lighten($dark_4, 2.5%))};
+@define-color thumbnail_fg_color #{if($variant == 'light', transparentize(black, .2), white)};
+
 // Miscellaneous
 @define-color shade_color #{if($variant == 'light', transparentize(black, .93), transparentize(black, .64))};
 @define-color scrollbar_outline_color #{if($variant == 'light', white, transparentize(black, .5))};
