--- a/gtk-4.0/_nautilus.scss
+++ b/gtk-4.0/_nautilus.scss
@@ -9,7 +9,15 @@
       background-color: if($variant=='light', gtkcolor(view_bg_color), gtkcolor(window_bg_color));
     }
   }
-
+  #NautilusPathBar {
+    box-shadow: inset 0 0 0 1px $button_border;
+  }
+  #NautilusPathButton {
+    @extend %button_flat;
+  }
+  #NautilusPathButton.current-dir {
+    box-shadow: none;
+  }
   placessidebar {
     background-color: if($variant=='light', gtkcolor(window_bg_color), gtkcolor(view_bg_color));
   }
